2001-03-13  Al Riddoch  <alriddoch@zepler.org>

	* src/*: Added more std:: prefixes to symbols from the std namespace.

	* src/Net/Stream.cc: Changed socket checks to check using the
	  good() method.

	* src/Net/Stream.cc, src/Codecs/XML.cc, src/Codecs/Packed.cc: Removed
	  default argument from Poll method definition as it should not be
	  in both declaration and definition.

2001-03-12  Al Riddoch  <alriddoch@zepler.org>

        * index.dox, AUTHORS: Modified docs to indicate new maintainer.

	* NEWS: Added planned 0.5 release.

2001-03-10  Al Riddoch  <alriddoch@zepler.org>

	* tutorial/example/simple_*.cc: Modified tutorial programs to
	  make sure they are completely immaculate.

	* Bumped up version to 0.4.1 ready for release soon.

	* HACKING: Updated to reflect current changes policy.

2001-03-09  Al Riddoch  <alriddoch@zepler.org>

	* src/Object/gen_cc.py: Modified so that the generated files no
	  longer contain "using namespace ...;" which speeds up compile
	  time.

	* src/Object/Operation/* src/Objects/Entity/*: Re-generated using
	  modified gen_cc.py.

2001-03-08  Al Riddoch  <alriddoch@zepler.org>

	* src/Message/Object.h: Added IsNum() to correspond to AsNum()
	  accessor.

2001-02-28  Al Riddoch  <alriddoch@zepler.org>

	* src/Message/Object.h: Added operator new() and operator delete()
	  to Atlas::Message::Object and implemented memory pool to improve
	  performance.

	* src/Message/Object.h: Changed ListType in Message::Object to
	  std::vector for performance.

	* src/Message/Object.h: Added AsNum() accessor for
	  Message::Object, for when coder does not care if it is Int or
	  Float.

	* src/Negotiate.h, src/Net/Stream.cc: Made negotiation debugging
	  output an option, and disabled by default.

2001-01-25  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* configure.am, configure.in: Changed version to 0.4.0
	
	* HACKING: Added info about CVS tags.

2001-01-23  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
