@@ -14,7 +14,7 @@ GameEntity::GameEntity()
 {
     SetId(std::string("game_entity"));
     Object::ListType parents;
-    parents.push_back(string("root_entity"));
+    parents.push_back(std::string("root_entity"));
     SetParents(parents);
 }
 
