@@ -14,7 +14,7 @@ Create::Create()
 {
     SetId(std::string("create"));
     Object::ListType parents;
-    parents.push_back(string("action"));
+    parents.push_back(std::string("action"));
     SetParents(parents);
 }
 
