@@ -14,7 +14,7 @@ Disappearance::Disappearance()
 {
     SetId(std::string("disappearance"));
     Object::ListType parents;
-    parents.push_back(string("sight"));
+    parents.push_back(std::string("sight"));
     SetParents(parents);
 }
 
