@@ -14,7 +14,7 @@ Get::Get()
 {
     SetId(std::string("get"));
     Object::ListType parents;
-    parents.push_back(string("action"));
+    parents.push_back(std::string("action"));
     SetParents(parents);
 }
 
