@@ -14,7 +14,7 @@ Imaginary::Imaginary()
 {
     SetId(std::string("imaginary"));
     Object::ListType parents;
-    parents.push_back(string("action"));
+    parents.push_back(std::string("action"));
     SetParents(parents);
 }
 
