@@ -14,7 +14,7 @@ Smell::Smell()
 {
     SetId(std::string("smell"));
     Object::ListType parents;
-    parents.push_back(string("perception"));
+    parents.push_back(std::string("perception"));
     SetParents(parents);
 }
 
